Added buy car announcement route
