# controllers/items.js
@@ -1,12 +1,25 @@
 const itemsRouter = require('express').Router()
-const Car = require('../models/car')
+const {Car, BuyCar} = require('../models/car')
 
 itemsRouter.get('/', async (request, response) => {
-  /*
-        #swagger.tags = ['Items']
-        #swagger.summary = 'Response all announcements'
-    */
+  /*@swagger
+    #swagger.tags = ['Items']
+    #swagger.summary = 'Response all sell announcements'
+  */
   const cars = await Car.find({})
+  if (!cars) {
+    return response.status(204).end()
+  }
+  response.json(cars)
+
+})
+
+itemsRouter.get('/buy', async (request, response) => {
+  /*@swagger
+    #swagger.tags = ['Items']
+    #swagger.summary = 'Response all buy announcements'
+  */
+  const cars = await BuyCar.find({})
   if (!cars) {
     return response.status(204).end()
   }
